--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
         <h2 class="text-3xl font-bold mb-6">Projects</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <div class="bg-white p-6 rounded shadow">
+                <h3 class="text-2xl font-bold mb-2">LoopStudios Website</h3>
+                <p class="text-lg leading-relaxed">Photography Studio responsive Website with tailwindcss</p>
+                <a href="https://coollad49.github.io/loopstudios/" class="text-blue-500">Website Link</a>
+            </div>
+            <div class="bg-white p-6 rounded shadow">
                 <h3 class="text-2xl font-bold mb-2">Http_server</h3>
                 <p class="text-lg leading-relaxed">In this project, I developed a custom HTTP server from scratch, demonstrating a deep understanding of fundamental web protocols and server-client interactions. This project involved building a fully functional HTTP server using Python, which could handle basic HTTP requests such as GET and POST, serve static files, and manage multiple client connections concurrently.</p>
                 <a href="https://github.com/coollad49/Http_server" class="text-blue-500">Github repo</a>
@@ -75,6 +80,11 @@
                 <h3 class="text-2xl font-bold mb-2">Product Expiry Alert Management System</h3>
                 <p class="text-lg leading-relaxed">The Product Expiry Alert Management System is a web application designed to track and manage the expiration dates of products in inventory. It provides proactive alerts and notifications to ensure timely action on expiring products, thereby minimizing waste and optimizing inventory management.</p>
                 <a href="https://github.com/coollad49/PEAMS/" class="text-blue-500">Github repo</a>
+            </div>
+            <div class="bg-white p-6 rounded shadow">
+                <h3 class="text-2xl font-bold mb-2">Task-management-dashboard-application</h3>
+                <p class="text-lg leading-relaxed">The Task Management Dashboard Application is a comprehensive tool designed to help individuals manage their tasks efficiently. It provides a user-friendly interface for creating, tracking, and organizing tasks. The application supports functionalities such as drag-and-drop task management, priority setting, and due date tracking, making it an essential tool for project management and daily task tracking.</p>
+                <a href="https://github.com/coollad49/task-management-dashboard-application" class="text-blue-500">Github repo</a>
             </div>
         </div>
     </section>
